--- a/src/app/Modules/Components/board/board.component.css
+++ b/src/app/Modules/Components/board/board.component.css
@@ -3,21 +3,19 @@
     display: flex;
 }
 .board{
+
+    width: 100%;
     display: flex;
     flex-direction: column;
     margin: 0;
-    border-radius: 15px;
-    background-color: #1f2739b5;
-    border: solid #203363 1px
+    align-items: center;
 }
-.container li{
-    border-bottom:solid 1px  #203363 ;
-    padding: 5px;
-}
-.container li:last-child{
+  
+ 
+.board li:last-child{
     border: none;
 }
-.container  h1 {
+.board  li p:first-child {
     font-weight: bold;
     font-size: 1em;
     text-align: left;
@@ -28,19 +26,46 @@
 .board li{
     display: flex;
     flex-direction: row;
-    gap: 10px;
+    align-items: center;
 }
 .board li p{
     padding: 10px 20px;
     
 }
 .board ul{
-    display: flex;
-    flex-direction: column;
+    position: relative;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 15px;
+    grid-auto-rows: minmax(12px, 55px);
+    padding: 20px 0px;
+    width: 70%;
     justify-content: center;
-    padding: 0px;
+    justify-items: center;
     margin: 0;
+ 
+    border-radius: 15px;
+    background-color: #1f2739b5;
+    border: solid #203363 1px
 }
 
 
+.actions button {
+    background: transparent;
+    border: none;
+    padding: 2px;
+}
 
+.actions {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    right: -30px;
+    top: -10px;
+    gap: 10px;
+    margin-top: 10px;
+}
+
+.actions img {
+    width: 15px;
+}
