--- a/src/app/Modules/Components/board/board.component.html
+++ b/src/app/Modules/Components/board/board.component.html
@@ -1,37 +1,18 @@
-
-<div class="container">
-	<div class="board">
-		<div class="main">
-			<ul>
-				<li>
-					<h1>Nombre :</h1>
-					<p>Cristian</p>
-				</li>
-				<li>
-					<h1>Apellido :</h1>
-					<p>Suarez</p>
-				</li>
-				<li>
-					<h1>Cedula :</h1>
-					<p>1089487451</p>
-				</li>
-				<li>
-					<h1>Celular :</h1>
-					<p>3168087491</p>
-				</li>
-				<li>
-					<h1>Apellido :</h1>
-					<p>Suarez</p>
-				</li>
-				<li>
-					<h1>Cedula :</h1>
-					<p>1089487451</p>
-				</li>
-				<li>
-					<h1>Celular :</h1>
-					<p>3168087491</p>
-				</li>
-			</ul>
-		</div>
+ 
+	<div class="board" *ngIf="generate">
+		<ul>
+			<li *ngFor="let item of this.view.data">
+				<p>{{item.itemTitle}}</p>
+				<p>{{item.itemData}}</p>
+			</li>
+			<div class="actions">
+				<button (click)="openModalUpdate(view.itemId)"><img
+						src="../../../assets/icons/reload.svg"></button>
+				<button (click)="deleteItem(view.itemId)"><img
+						src="../../../assets/icons/delete.svg"></button>
+			</div>
+		</ul>
+		
 	</div>
-</div>
+ 
+ 
