--- a/src/app/Modules/Components/regular-chart/regular-chart.component.css
+++ b/src/app/Modules/Components/regular-chart/regular-chart.component.css
@@ -65,10 +65,10 @@
     display: flex;
     flex-direction: row;
     width: 250px;
-    height: 118px;
+    height: 130px;
     gap: 8px;
     border-radius: 15px;
-    background-color: #192239;
+    background-color: #192239b8;
     text-align: center;
     justify-content: space-between;
     align-items: center;
