added description component

--- a/src/app/Modules/Pages/areas-view/areas/areas.component.html
+++ b/src/app/Modules/Pages/areas-view/areas/areas.component.html
@@ -1,3 +1,5 @@
+<app-description [view]="this.description"></app-description>
+
 
 <a><button (click)="openModalCreate()" class="add">Añadir</button></a>
 
