css fixes in board and description components, type changes in iconchart model and regularchart model

--- a/src/app/Modules/Components/description/description.component.css
+++ b/src/app/Modules/Components/description/description.component.css
@@ -97,3 +97,9 @@ h4{
 .des-circle p:nth-child(2){
     font-size: 0.8em;
 }
+
+.des-circle p {
+    width: max-content;
+    text-align: center;
+}
+
