--- a/src/app/Modules/Components/board/board.component.css
+++ b/src/app/Modules/Components/board/board.component.css
@@ -26,7 +26,9 @@
 .board li{
     display: flex;
     flex-direction: row;
+    width: 100%;
     align-items: center;
+    justify-content: space-between;
 }
 .board li p{
     padding: 10px 20px;
