--- a/src/app/Modules/Components/description/description.component.css
+++ b/src/app/Modules/Components/description/description.component.css
@@ -57,12 +57,14 @@ h4{
 .circles{
     display: grid;
     width: 100%;
-    height: 140px;
-    align-items: center;
+    height: 100%;
     align-content: center;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
     grid-gap: 15px;
-    grid-auto-rows: minmax(12px, 55px);
+    grid-auto-rows: minmax(80px, 190px);
+    justify-items: center;
+    justify-content: center;
+    align-items: center;
 }
 
 .des-content{
