--- a/src/app/Modules/Components/icon-chart-sole/icon-chart-sole.component.css
+++ b/src/app/Modules/Components/icon-chart-sole/icon-chart-sole.component.css
@@ -21,13 +21,10 @@
   text-align: center;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   width: 100%;
-  cursor: pointer;
+
 }
 
-.area:hover {
-  transition: 0.3s;
-  transform: scale(1.05)
-}
+
 
 .area:hover~.actions {
   transition: 0.3s;
@@ -148,4 +145,12 @@
   100% {
     transform: translateX(-200%);
   }
+}
+
+p.unloaded{
+  background: #273350;
+  border-radius: 10px;
+  height: 15px !important; 
+  width: 100%;
+  margin: 9px 0px !important;
 }
