--- a/src/app/Modules/Components/icon-chart-sole/icon-chart-sole.component.html
+++ b/src/app/Modules/Components/icon-chart-sole/icon-chart-sole.component.html
@@ -8,12 +8,12 @@
         <p [ngClass]="{
               'animateLonger': view.itemName.length >= 20,
               'animate': view.itemName.length < 20 && view.itemName.length > 11
-            }">{{ view.itemName }}</p>
+            , 'unloaded': !this.generate}">{{ view.itemName }}</p>
         <p>{{ view.itemOne }}</p>
-        <p *ngIf="view.itemCode"> {{view.itemCode}} </p>
-        <p *ngIf="view.itemOne">{{ view.itemOne }}</p>
-        <p *ngIf="view.itemTwo">{{ view.itemTwo }}</p>
-        <p *ngIf="view.itemThree">{{ view.itemThree }}</p>
+        <p *ngIf="view.itemCode" [ngClass]="{'unloaded': !this.generate}"> {{view.itemCode}} </p>
+        <p *ngIf="view.itemOne" [ngClass]="{'unloaded': !this.generate}">{{ view.itemOne }}</p>
+        <p *ngIf="view.itemTwo" [ngClass]="{'unloaded': !this.generate}">{{ view.itemTwo }}</p>
+        <p *ngIf="view.itemThree" [ngClass]="{'unloaded': !this.generate}">{{ view.itemThree }}</p>
       </div>
       <div class="button">
         <a><button>ir</button></a>
