--- a/src/app/Modules/Components/icon-chart/icon-chart.component.html
+++ b/src/app/Modules/Components/icon-chart/icon-chart.component.html
@@ -1,6 +1,6 @@
-<div class="wallpaper" *ngIf="this.generate">
+<div class="wallpaper">
   <div class="slider">
-    <div class="slide-item" *ngFor="let item of view | Paginate: page_size: page_number">
+    <div class="slide-item" *ngFor="let item of view | Paginate: page_size: page_number" (click)="redirect(item.itemId)">
       <div class="area">
         <picture>
           <img width="64" height="64" src={{item.iconUrl}} alt="Icono" />
@@ -9,11 +9,11 @@
           <p [ngClass]="{
             'animateLonger': item.itemName.length >= 20,
             'animate': item.itemName.length < 20 && item.itemName.length > 11
-          }">{{ item.itemName }}</p>
-          <p *ngIf="item.itemCode"> {{item.itemCode}} </p>
-          <p *ngIf="item.itemOne">{{ item.itemOne }}</p>
-          <p *ngIf="item.itemTwo">{{ item.itemTwo }}</p>
-          <p *ngIf="item.itemThree">{{ item.itemThree }}</p>
+          , 'unloaded': !this.generate}">{{ item.itemName }}</p>
+          <p *ngIf="item.itemCode" [ngClass]="{'unloaded': !this.generate}"> {{item.itemCode}} </p>
+          <p *ngIf="item.itemOne" [ngClass]="{'unloaded': !this.generate}">{{ item.itemOne }}</p>
+          <p *ngIf="item.itemTwo" [ngClass]="{'unloaded': !this.generate}">{{ item.itemTwo }}</p>
+          <p *ngIf="item.itemThree" [ngClass]="{'unloaded': !this.generate}">{{ item.itemThree }}</p>
         </div>
         <div class="button">
           <a><button>ir</button></a>
