--- a/src/app/Modules/Components/regular-chart-sole/regular-chart-sole.component.css
+++ b/src/app/Modules/Components/regular-chart-sole/regular-chart-sole.component.css
@@ -159,3 +159,17 @@
     gap: 20px;
 }
 
+p.unloaded{
+    background: #273350;
+    border-radius: 10px;
+    height: 15px;
+    width: 100%;
+    margin: 9px 0px !important;
+}
+
+.active-tokens p:nth-child(1).unloaded{
+    background: #228922;
+    width: 100%;
+    height: 70%;
+    border-radius: 10px;
+}
