--- a/src/app/Modules/Components/regular-chart/regular-chart.component.css
+++ b/src/app/Modules/Components/regular-chart/regular-chart.component.css
@@ -65,6 +65,7 @@
     display: flex;
     flex-direction: row;
     width: 250px;
+    cursor: pointer;
     height: 130px;
     gap: 8px;
     border-radius: 15px;
@@ -76,6 +77,8 @@
     margin: 20px;
     color: white !important;
     border: solid #203363 1px;
+    transition: 0.4s;
+    animation-timing-function: ease-in-out;
 }
 
 .training-program p {
@@ -114,6 +117,10 @@
 .training-program .actions button {
     background: transparent;
     border: none;
+}
+
+.training-program:hover {
+    transform: scale(1.05);
 }
 
 .actions {
@@ -159,3 +166,17 @@
     gap: 20px;
 }
 
+p.unloaded{
+    background: #273350;
+    border-radius: 10px;
+    height: 15px !important;
+    width: 100%;
+    margin: 9px 0px !important;
+}
+
+.active-tokens p:nth-child(1).unloaded{
+    background: #228922;
+    width: 100%;
+    height: 70%;
+    border-radius: 10px;
+}
