--- a/src/app/Modules/Components/regular-chart/regular-chart.component.html
+++ b/src/app/Modules/Components/regular-chart/regular-chart.component.html
@@ -1,19 +1,19 @@
-<div class="wallpaper" *ngIf="this.generate">
+<div class="wallpaper">
     <div class="slider">
-        <div class="training-program" *ngFor="let item of view | Paginate: page_size: page_number">
+        <div class="training-program" *ngFor="let item of view | Paginate: page_size: page_number" (click)="redirect(item.itemId)">
             <div class="active-tokens">
-                <p>{{item.itemEnfasis}}</p>
+                <p [ngClass]="{'unloaded': !this.generate}">{{item.itemEnfasis}}</p>
                 <p> {{item.itemMessagge}}</p>
             </div>
             <div class="description">
                 <p [ngClass]="{
                     'animateLonger': item.itemName.length >= 20,
                     'animate': item.itemName.length < 20 && item.itemName.length > 11
-                  }">{{item.itemName}}</p>
-                <p>{{item.itemCode}}</p>
-                <p *ngIf="item.itemOne">{{item.itemOne}}</p>
-                <p *ngIf="item.itemTwo">{{ item.itemTwo }}</p>
-                <p *ngIf="item.itemThree">{{ item.itemThree }}</p>
+                  , 'unloaded': !this.generate}">{{item.itemName}}</p>
+                <p [ngClass]="{'unloaded': !this.generate}">{{item.itemCode}}</p>
+                <p *ngIf="item.itemOne" [ngClass]="{'unloaded': !this.generate}">{{item.itemOne}}</p>
+                <p *ngIf="item.itemTwo" [ngClass]="{'unloaded': !this.generate}">{{ item.itemTwo }}</p>
+                <p *ngIf="item.itemThree" [ngClass]="{'unloaded': !this.generate}">{{ item.itemThree }}</p>
             </div>
             <div class="actions">
                 <button (click)="openModalUpdate(item.itemId)"><img src="../../../assets/icons/reload.svg"></button>
