--- a/src/app/Modules/Components/extend-modal-form/extend-modal-form.component.html
+++ b/src/app/Modules/Components/extend-modal-form/extend-modal-form.component.html
@@ -3,12 +3,17 @@
     <mat-dialog-content>
         <div class="form-body">
             <div class="form-content" *ngFor="let fill of this.filler">
-                <div class="form-item" *ngIf="fill.type == 'input'">
+                <div class="form-item" *ngIf="fill.type == 'input' && fill.control != 'file'">
                     <label [for]="fill.formControlName">{{fill.fieldName}}</label>
                     <input [type]="fill.control" [formControlName]="fill.formControlName || ''"
                         [(ngModel)]="fill.ngModel" (keyup)="  fill.uppercase ? convertToUppercase(fill) : '' "
                         [placeholder]="fill.placeholder" required />
                 </div>
+                <div class="form-item" *ngIf="fill.type == 'input' &&  fill.control == 'file'">
+                    <label [for]="fill.formControlName">{{fill.fieldName}}</label>
+                    <input type="file" [formControlName]="fill.formControlName || ''"
+                         (change)="fill.control ? onFileChangeDoc($event, fill.fieldName) : ''"  />
+                </div>  
                 <div class="form-item" *ngIf="fill.type == 'select'">
                     <label [for]="fill.formControlName">{{fill.fieldName}}</label>
                     <div class="update">
