--- a/src/app/Modules/Components/charge-wheel/charge-wheel.component.html
+++ b/src/app/Modules/Components/charge-wheel/charge-wheel.component.html
@@ -1,31 +1,33 @@
-<div *ngIf="generate">
-    <div class="content-wheel">
-        <div class="charge_wheel" *ngFor="let item of  this.view | Paginate: page_size: page_number">
-            <div class="porcentajes" style="--porcentaje: {{item.itemPercentaje}}">
-                <div class="content">
-                    <div class="container">
-                        <p [ngClass]="{'animateLonger': item.itemName.length >= 20,'animate': item.itemName.length < 20 && item.itemName.length > 11}">
-                            {{item.itemName}}
-                        </p>
-                        <p *ngIf="item.itemCode">{{item.itemCode}} </p>
-                        <p *ngIf="item.itemOne">{{item.itemOne}} </p>
-                        <p *ngIf="item.itemTwo"> {{item.itemTwo}} </p>
-                        <p *ngIf="item.itemThree"> {{item.itemThree}} </p>
-                        <p>{{item.itemPercentaje}}%</p>
-                    </div>
-                    <div class="actions">
-                        <button (click)="openModalUpdate(item.itemId)"><img src="../../../assets/icons/reload.svg"></button>
-                        <button (click)="deleteItem(item.itemId, item.itemName)"><img src="../../../assets/icons/delete.svg"></button>
-                        <button (click)="viewInformation(item.itemId)"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d8/OOjs_UI_icon_eye-progressive.svg/20px-OOjs_UI_icon_eye-progressive.svg.png"></button>
-                    </div>
+<div class="content-wheel">
+    <div class="charge_wheel" *ngFor="let item of  this.view | Paginate: page_size: page_number">
+        <div class="porcentajes" style="--porcentaje: {{item.itemPercentaje}}">
+            <div class="content">
+                <div class="container">
+                    <p
+                        [ngClass]="{'animateLonger': item.itemName.length >= 20,'animate': item.itemName.length < 20 && item.itemName.length > 11, 'unloaded': !this.generate}">
+                        {{item.itemName}}
+                    </p>
+                    <p *ngIf="item.itemCode" [ngClass]="{'unloaded': !this.generate}">{{item.itemCode}} </p>
+                    <p *ngIf="item.itemOne" [ngClass]="{'unloaded': !this.generate}">{{item.itemOne}} </p>
+                    <p *ngIf="item.itemTwo" [ngClass]="{'unloaded': !this.generate}"> {{item.itemTwo}} </p>
+                    <p *ngIf="item.itemThree" [ngClass]="{'unloaded': !this.generate}"> {{item.itemThree}} </p>
+                    <p>{{item.itemPercentaje}}%</p>
                 </div>
-                <svg width="230px" height="230px">
-          <circle r="100px" cx="50%" cy="50%" pathLength="100" [style.stroke]="colores[0]"></circle>
-          <circle r="100px" cx="50%" cy="50%" pathLength="100" [style.stroke]="colores[0]"></circle>
-        </svg>
+                <div class="actions">
+                    <button (click)="openModalUpdate(item.itemId)"><img src="../../../assets/icons/reload.svg"></button>
+                    <button (click)="deleteItem(item.itemId, item.itemName)"><img
+                            src="../../../assets/icons/delete.svg"></button>
+                    <button (click)="viewInformation(item.itemId)"><img
+                            src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d8/OOjs_UI_icon_eye-progressive.svg/20px-OOjs_UI_icon_eye-progressive.svg.png"></button>
+                </div>
             </div>
+            <svg width="230px" height="230px">
+                <circle r="100px" cx="50%" cy="50%" pathLength="100" [style.stroke]="colores[0]"></circle>
+                <circle r="100px" cx="50%" cy="50%" pathLength="100" [style.stroke]="colores[0]"></circle>
+            </svg>
         </div>
     </div>
-    <mat-paginator [length]="view.length" [pageSize]="page_size" [hidePageSize]=true (page)="handlePage($event)" showFirstLastButtons>
-    </mat-paginator>
 </div>
+<mat-paginator *ngIf="this.generate" [length]="view.length" [pageSize]="page_size" [hidePageSize]=true
+    (page)="handlePage($event)" showFirstLastButtons>
+</mat-paginator>
