--- a/src/app/Modules/Pages/areas-view/areas/areas.component.html
+++ b/src/app/Modules/Pages/areas-view/areas/areas.component.html
@@ -1,13 +1,13 @@
 <app-description [view]="this.description"></app-description>
-
-
+<app-simple-chart [view]="this.view"></app-simple-chart>
+<app-simple-chart-sole></app-simple-chart-sole>
 <a><button (click)="openModalCreate()" class="add">Añadir</button></a>
 
 <app-icon-chart [view]="this.view" (dataToUpdate)="Update($event)" (dataToDelete)="Delete($event)"
     (dataInformation)="extendInformation($event)"></app-icon-chart>
 <app-icon-chart-sole [view]="this.soleView" (dataToUpdate)="Update($event)" (dataToDelete)="Delete($event)"
 (dataInformation)="extendInformation($event)"></app-icon-chart-sole>
-
+<app-icon-chart></app-icon-chart>
 
 <app-board-table [view]="this.tableView" (dataToUpdate)="Update($event)"
     (dataToDelete)="Delete($event)"></app-board-table>
