--- a/src/app/Modules/Components/charge-wheel-sole/charge-wheel-sole.component.html
+++ b/src/app/Modules/Components/charge-wheel-sole/charge-wheel-sole.component.html
@@ -15,10 +15,10 @@
                         <p>{{view.itemPercentaje}}%</p>
         </div>
         <div class="actions">
-          <button (click)="openModalUpdate(this.view.itemId)"><img src="../../../assets/icons/reload.svg"></button>
-          <button (click)="deleteItem(this.view.itemId, this.view.itemName)"><img
+          <button *ngIf="!view.updateHidden" (click)="openModalUpdate(this.view.itemId)"><img src="../../../assets/icons/reload.svg"></button>
+          <button *ngIf="!view.deleteHidden" (click)="deleteItem(this.view.itemId, this.view.itemName)"><img
               src="../../../assets/icons/delete.svg"></button>
-          <button (click)="viewInformation(view.itemId)"><img
+          <button *ngIf="!view.infoHidden" (click)="viewInformation(view.itemId)"><img
               src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d8/OOjs_UI_icon_eye-progressive.svg/20px-OOjs_UI_icon_eye-progressive.svg.png"></button>
         </div>
       </div>
