--- a/src/app/Modules/Components/regular-chart-sole/regular-chart-sole.component.html
+++ b/src/app/Modules/Components/regular-chart-sole/regular-chart-sole.component.html
@@ -15,10 +15,10 @@
             <p [ngClass]="{'unloaded': !this.generate}" *ngIf="view.itemThree">{{ view.itemThree }}</p>
         </div>
         <div class="actions">
-            <button (click)="openModalUpdate(view.itemId)"><img src="../../../assets/icons/reload.svg"></button>
-            <button (click)="deleteItem(view.itemId, view.itemName)"><img
+            <button *ngIf="!view.updateHidden" (click)="openModalUpdate(view.itemId)"><img src="../../../assets/icons/reload.svg"></button>
+            <button *ngIf="!view.deleteHidden" (click)="deleteItem(view.itemId, view.itemName)"><img
                     src="../../../assets/icons/delete.svg"></button>
-            <button (click)="viewInformation(view.itemId)"><img
+            <button *ngIf="!view.infoHidden" (click)="viewInformation(view.itemId)"><img
                     src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d8/OOjs_UI_icon_eye-progressive.svg/20px-OOjs_UI_icon_eye-progressive.svg.png"></button>
         </div>
     </div>
