--- a/src/app/Modules/Components/board-table/board-table.component.css
+++ b/src/app/Modules/Components/board-table/board-table.component.css
@@ -120,3 +120,60 @@ body {
     align-items: center;
 }
 
+.switch {
+    display: flex;
+    align-items: center;
+    gap: 3px;
+    max-width: 400px;
+    white-space: break-spaces;
+}
+
+.switch input {
+    width: 18px;
+    min-width: 18px;
+}
+
+.switch {
+    position: relative;
+    display: flex;
+    gap: 20px;
+}
+
+.switch input {
+    display: none;
+}
+
+.slide {
+    background-color: #ccc;
+    cursor: pointer;
+    width: 45px;
+    height: 20px;
+    transition: .4s;
+
+}
+
+.slide:before {
+    background-color: #fff;
+    content: "";
+    height: 20px;
+    position: absolute;
+    left: 0px;
+    transition: .4s;
+    width: 22px;
+}
+
+input:checked+.slide {
+    background-color: #006b00;
+}
+
+input:checked+.slide:before {
+    transform: translateX(22px);
+}
+
+.slide.round {
+    border-radius: 34px;
+}
+
+.slide.round:before {
+    border-radius: 50%;
+} 
