--- a/src/app/Modules/Components/board-table/board-table.component.html
+++ b/src/app/Modules/Components/board-table/board-table.component.html
@@ -13,10 +13,13 @@
                     <td *ngFor="let data of item.itemData"> {{data}} </td>
                     <td>
                         <div class="actions">
-                            <button (click)="openModalUpdate(item.itemId)"><img
+                            <button *ngIf="!item.updateHidden" (click)="openModalUpdate(item.itemId)"><img
                                     src="../../../assets/icons/reload.svg"></button>
-                            <button (click)="deleteItem(item.itemId, item.itemName)"><img
+                            <button *ngIf="!item.deleteHidden" (click)="deleteItem(item.itemId, item.itemName)"><img
                                     src="../../../assets/icons/delete.svg"></button>
+                            <label *ngIf="item.showChecks" class="switch"> <input type="checkbox" (change)="checkStateCapture(item.itemId, $event)">
+                                <div class="slide round"></div>
+                            </label>
                         </div>
                     </td>
                 </tr>
