--- a/src/app/Modules/Components/icon-chart/icon-chart.component.html
+++ b/src/app/Modules/Components/icon-chart/icon-chart.component.html
@@ -1,33 +1,41 @@
 <div class="wallpaper">
   <div class="slider">
-    <div class="slide-item" *ngFor="let item of view | Paginate: page_size: page_number" (click)="redirect(item.itemId)">
-      <div class="area">
-        <picture>
-          <img width="64" height="64" src={{item.iconUrl}} alt="Icono" />
-        </picture>
-        <div class="container">
-          <p [ngClass]="{
+    <div class="slide-item" *ngFor="let item of view | Paginate: page_size: page_number">
+      <div style="height: max-content;
+      position: relative;
+      width: fit-content;">
+        <div class="area" (click)="redirect(item.itemId)"> 
+          <picture>
+            <img width="64" height="64" src={{item.iconUrl}} alt="Icono" />
+          </picture>
+
+          <div class="container">
+            <p [ngClass]="{
             'animateLonger': item.itemName.length >= 20,
             'animate': item.itemName.length < 20 && item.itemName.length > 11
           , 'unloaded': !this.generate}">{{ item.itemName }}</p>
-          <p *ngIf="item.itemCode" [ngClass]="{'unloaded': !this.generate}"> {{item.itemCode}} </p>
-          <p *ngIf="item.itemOne" [ngClass]="{'unloaded': !this.generate}">{{ item.itemOne }}</p>
-          <p *ngIf="item.itemTwo" [ngClass]="{'unloaded': !this.generate}">{{ item.itemTwo }}</p>
-          <p *ngIf="item.itemThree" [ngClass]="{'unloaded': !this.generate}">{{ item.itemThree }}</p>
-        </div>
-        <div class="button">
-          <a><button>ir</button></a>
+            <p *ngIf="item.itemCode" [ngClass]="{'unloaded': !this.generate}"> {{item.itemCode}} </p>
+            <p *ngIf="item.itemOne" [ngClass]="{'unloaded': !this.generate}">{{ item.itemOne }}</p>
+            <p *ngIf="item.itemTwo" [ngClass]="{'unloaded': !this.generate}">{{ item.itemTwo }}</p>
+            <p *ngIf="item.itemThree" [ngClass]="{'unloaded': !this.generate}">{{ item.itemThree }}</p>
+          </div>
+          <div class="button">
+            <a><button>ir</button></a>
+          </div>
         </div>
         <div class="actions">
-          <button *ngIf="!item.updateHidden" (click)="openModalUpdate(item.itemId)"><img src="../../../assets/icons/reload.svg"></button>
-          <button *ngIf="!item.deleteHidden" (click)="deleteItem(item.itemId, item.itemName)"><img src="../../../assets/icons/delete.svg"></button>
-          <button *ngIf="!item.infoHidden" (click)="viewInformation(item.itemId)"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d8/OOjs_UI_icon_eye-progressive.svg/20px-OOjs_UI_icon_eye-progressive.svg.png"></button>
+          <button *ngIf="!item.updateHidden" (click)="openModalUpdate(item.itemId)"><img
+              src="../../../assets/icons/reload.svg"></button>
+          <button *ngIf="!item.deleteHidden" (click)="deleteItem(item.itemId, item.itemName)"><img
+              src="../../../assets/icons/delete.svg"></button>
+          <button *ngIf="!item.infoHidden" (click)="viewInformation(item.itemId)"><img
+              src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d8/OOjs_UI_icon_eye-progressive.svg/20px-OOjs_UI_icon_eye-progressive.svg.png"></button>
         </div>
       </div>
     </div>
   </div>
 </div>
 
-<mat-paginator *ngIf="this.generate" [length]="view.length" [pageSize]="page_size" [hidePageSize]=true (page)="handlePage($event)"
-  showFirstLastButtons>
+<mat-paginator *ngIf="this.generate" [length]="view.length" [pageSize]="page_size" [hidePageSize]=true
+  (page)="handlePage($event)" showFirstLastButtons>
 </mat-paginator>
