--- a/src/app/Modules/Components/charge-wheel-sole/charge-wheel-sole.component.html
+++ b/src/app/Modules/Components/charge-wheel-sole/charge-wheel-sole.component.html
@@ -2,7 +2,7 @@
   <div class="charge_wheel">
     <div class="porcentajes" style="--porcentaje: {{view.itemPercentaje}}">
       <div class="content">
-        <div class="container">
+        <div class="container" (click)="redirect(view.itemId)">
           <p [ngClass]="{
               'animateLonger': this.view.itemName.length >= 20,
               'animate': this.view.itemName.length < 20 && this.view.itemName.length > 11
