--- a/src/app/Modules/Components/icon-chart/icon-chart.component.css
+++ b/src/app/Modules/Components/icon-chart/icon-chart.component.css
@@ -23,15 +23,8 @@
   cursor: pointer;
 }
 
-.area:hover {
-  transition: 0.3s;
-  transform: scale(1.05)
-}
-
-.area:hover~ .actions {
-  transition: 0.3s;
-  transform: scale(1.05)
-}
+ 
+ 
 
 .area picture {
   padding: 10px;
@@ -76,7 +69,7 @@ button {
   display: flex;
   position: absolute;
   flex-direction: column;
-  right: -22px;
+  right: 5px;
   top: 10px;
 }
 
@@ -147,4 +140,11 @@ p.unloaded{
   height: 15px !important; 
   width: 100%;
   margin: 9px 0px !important;
+}
+
+.slide-item:hover{
+  transform: scale(1.05);
+}
+.slide-item{
+  transition: 0.5s;
 }
