--- a/src/app/Modules/Components/regular-chart-sole/regular-chart-sole.component.css
+++ b/src/app/Modules/Components/regular-chart-sole/regular-chart-sole.component.css
@@ -7,8 +7,8 @@
     display: flex;
     position: absolute;
     flex-direction: column;
-    right: 5px;
-    top: 10px;
+    right: -15px;
+    top: 28px;
 }
 
 .description {
@@ -74,6 +74,7 @@
     align-items: center;
     padding: 20px;
     margin: 20px;
+    cursor: pointer;
     color: white !important;
     border: solid #203363 1px;
 }
@@ -111,24 +112,18 @@
     font-size: 1.2em;
 }
 
-.training-program .actions button {
+ .actions button {
     background: transparent;
     border: none;
 }
 
-.actions {
-    width: 8px;
-    position: absolute;
-    top: 0px;
-    right: -5px;
-    color: #ee3f3f;
-}
+ 
 
 .actions button {
     cursor: pointer;
 }
 
-.training-program .actions img {
+ .actions img {
     width: 15px;
 }
 
@@ -173,3 +168,14 @@ p.unloaded{
     height: 70%;
     border-radius: 10px;
 }
+
+.relative{
+    position: relative;
+    transition: 0.5s;
+}
+
+.relative:hover{
+    transform: scale(1.05);
+}
+
+ 
