--- a/src/app/Modules/Components/regular-chart-sole/regular-chart-sole.component.html
+++ b/src/app/Modules/Components/regular-chart-sole/regular-chart-sole.component.html
@@ -1,21 +1,24 @@
 <div class="wallpaper">
-    <div class="training-program">
-        <div class="active-tokens">
-            <p [ngClass]="{'unloaded': !this.generate}">{{view.itemEnfasis}}</p>
-            <p> {{view.itemMessagge}}</p>
-        </div>
-        <div class="description">
-            <p [ngClass]="{
+    <div class="relative">
+        <div class="training-program" (click)="redirect(view.itemId)">
+            <div class="active-tokens">
+                <p [ngClass]="{'unloaded': !this.generate}">{{view.itemEnfasis}}</p>
+                <p> {{view.itemMessagge}}</p>
+            </div>
+            <div class="description">
+                <p [ngClass]="{
                     'animateLonger': view.itemName.length >= 20,
                     'animate': view.itemName.length < 20 && view.itemName.length > 11
                     , 'unloaded': !this.generate}">{{view.itemName}}</p>
-            <p [ngClass]="{'unloaded': !this.generate}">{{view.itemCode}}</p>
-            <p [ngClass]="{'unloaded': !this.generate}" *ngIf="view.itemOne">{{view.itemOne}}</p>
-            <p [ngClass]="{'unloaded': !this.generate}" *ngIf="view.itemTwo">{{ view.itemTwo }}</p>
-            <p [ngClass]="{'unloaded': !this.generate}" *ngIf="view.itemThree">{{ view.itemThree }}</p>
+                <p [ngClass]="{'unloaded': !this.generate}">{{view.itemCode}}</p>
+                <p [ngClass]="{'unloaded': !this.generate}" *ngIf="view.itemOne">{{view.itemOne}}</p>
+                <p [ngClass]="{'unloaded': !this.generate}" *ngIf="view.itemTwo">{{ view.itemTwo }}</p>
+                <p [ngClass]="{'unloaded': !this.generate}" *ngIf="view.itemThree">{{ view.itemThree }}</p>
+            </div>
         </div>
         <div class="actions">
-            <button *ngIf="!view.updateHidden" (click)="openModalUpdate(view.itemId)"><img src="../../../assets/icons/reload.svg"></button>
+            <button *ngIf="!view.updateHidden" (click)="openModalUpdate(view.itemId)"><img
+                    src="../../../assets/icons/reload.svg"></button>
             <button *ngIf="!view.deleteHidden" (click)="deleteItem(view.itemId, view.itemName)"><img
                     src="../../../assets/icons/delete.svg"></button>
             <button *ngIf="!view.infoHidden" (click)="viewInformation(view.itemId)"><img
