--- a/src/app/Modules/Components/regular-chart/regular-chart.component.css
+++ b/src/app/Modules/Components/regular-chart/regular-chart.component.css
@@ -39,6 +39,7 @@
     0% {
         transform: translateX(0);
     }
+
     100% {
         transform: translateX(-200%);
     }
@@ -59,6 +60,7 @@
 .training-program:nth-child(n) {
     padding: 0px 10px;
 }
+
 
 .training-program {
     position: relative;
@@ -114,20 +116,24 @@
     font-size: 1.2em;
 }
 
-.training-program .actions button {
+.actions button {
     background: transparent;
     border: none;
 }
 
-.training-program:hover {
-    transform: scale(1.05);
+.relative{
+    position: relative;
+    transition: 0.5s;
 }
 
+.relative:hover{
+    transform: scale(1.05);
+}
 .actions {
     width: 8px;
     position: absolute;
-    top: 0px;
-    right: -5px;
+    top: 25px;
+    right: 4px;
     color: #ee3f3f;
 }
 
@@ -135,27 +141,10 @@
     cursor: pointer;
 }
 
-.training-program .actions img {
+.actions img {
     width: 15px;
 }
 
-.button-añadir button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #006B00;
-    border-radius: 10px;
-    padding: 5px 8px;
-    border: none;
-    color: #fff;
-}
-
-.button-añadir button::before {
-    content: "+";
-    color: #fff;
-    font-size: 22px;
-    padding: 0 8px;
-}
 
 .display {
     padding: 15px;
@@ -166,7 +155,7 @@
     gap: 20px;
 }
 
-p.unloaded{
+p.unloaded {
     background: #273350;
     border-radius: 10px;
     height: 15px !important;
@@ -174,7 +163,7 @@ p.unloaded{
     margin: 9px 0px !important;
 }
 
-.active-tokens p:nth-child(1).unloaded{
+.active-tokens p:nth-child(1).unloaded {
     background: #228922;
     width: 100%;
     height: 70%;
