--- a/src/styles.css
+++ b/src/styles.css
@@ -124,6 +124,7 @@ app-footer {
     display: flex !important;
     justify-content: center;
     text-align: center;
+    position: relative;
     max-height: 320px;
     min-height: 200px;
     cursor: pointer;
@@ -305,7 +306,7 @@ button.cancel::before {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 20px;
+    margin-bottom: 30px;
     margin-top: 20px;
 }
 
