--- a/src/app/Core/notification/notification.component.html
+++ b/src/app/Core/notification/notification.component.html
@@ -1,4 +1,4 @@
-<div #notification class="notification">
+<div #notification class="notification" (click)="clear()">
     <div class="notify-content">
         <div class="bell"></div>
         <div class="alerts">
