--- a/src/app/Modules/Components/board/board.component.css
+++ b/src/app/Modules/Components/board/board.component.css
@@ -3,7 +3,6 @@
     display: flex;
 }
 .board{
-
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -20,8 +19,7 @@
     font-size: 1em;
     text-align: left;
     padding: 10px;
-    color: #185875;
-    
+    color: #1976a0;
 }
 .board li{
     display: flex;
@@ -32,7 +30,6 @@
 }
 .board li p{
     padding: 10px 20px;
-    
 }
 .board ul{
     position: relative;
@@ -45,7 +42,6 @@
     justify-content: center;
     justify-items: center;
     margin: 0;
- 
     border-radius: 15px;
     background-color: #1f2739d9;
     border: solid #203363 1px
