--- a/src/app/Modules/Components/extend-modal-form/extend-modal-form.component.html
+++ b/src/app/Modules/Components/extend-modal-form/extend-modal-form.component.html
@@ -43,12 +43,17 @@
                 </div>
                 <div class="form-item" *ngIf="fill.type == 'datalist'">
                     <label [for]="fill.formControlName">{{fill.fieldName}}</label>
+                    <div class="update">
+
                     <input [formControlName]="fill.formControlName || ''" [type]="fill.control"
                         [(ngModel)]="fill.ngModel" (keyup)="  fill.uppercase ? convertToUppercase(fill) : '' "
                         [placeholder]="fill.placeholder" required [attr.list]="fill.fieldName"/>
                     <datalist [id]="fill.fieldName">
                         <option *ngFor='let item of fill.data' [value]="item.data"> </option>
                     </datalist>
+                    <button *ngIf="fill.extend" class="add"
+                    (click)="openUpdate(fill.extend, fill.fieldName)"></button>
+                    </div>
                 </div>
                 <div class="form-item" *ngIf="fill.type == 'textarea'">
                     <label [for]="fill.formControlName">{{fill.fieldName}}</label>
