--- a/src/app/Modules/Components/extend-modal-form/extend-modal-form.component.html
+++ b/src/app/Modules/Components/extend-modal-form/extend-modal-form.component.html
@@ -1,4 +1,4 @@
-<div mat-dialog-title> {{this.extendModalTitle}} <button class="close" mat-dialog-close>⦻</button></div>
+<div mat-dialog-title> <p>{{this.extendModalTitle}}</p> <button class="close" mat-dialog-close>⦻</button></div>
 <form [formGroup]="formExtend">
     <mat-dialog-content>
         <div class="form-body">
