--- a/src/app/material-formacion-modal/material-formacion-modal.component.html
+++ b/src/app/material-formacion-modal/material-formacion-modal.component.html
@@ -1,4 +1,4 @@
-<h2 mat-dialog-title>Modal de Material de Formación</h2>
+<!--<h2 mat-dialog-title>Modal de Material de Formación</h2>
 <div mat-dialog-content>
   <form [formGroup]="formMaterialFormacion">
     <mat-form-field>
@@ -22,4 +22,4 @@
   <button mat-raised-button color="primary" (click)="guardarMaterialFormacion()" [disabled]="formMaterialFormacion.invalid">
     Guardar
   </button>
-</div>
+</div>-->
